test/checker/register/invalid/no_such_module.km
module NoSuchModule;

type A [B::Foo];
